--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -190,3 +190,6 @@ metrics:
 
 # Define custom environment variables to pass to the image here
 extraEnv: {}
+
+# Additional labels to apply to the statefulset pod(s).
+podLabels: {}
